Closed
Bug 256603
Opened 21 years ago
Closed 21 years ago
Firefox and Mozilla crash at startup on linux alpha (and possibly other 64 bits arches).
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: glandium, Assigned: pkwarren)
References
Details
(4 keywords)
Attachments
(1 file)
|
3.75 KB,
patch
|
Louie.Zhao
:
review+
dbaron
:
superreview+
chofmann
:
approval-aviary+
chofmann
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.7) Gecko/20040822 Firefox/0.9.3
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; ja-JP; rv:1.7) Gecko/20040822 Firefox/0.9.3
in accessible/src/atk/nsAccessibleWrap.cpp,
nsAccessibleWrap::GetMaiAtkType returns a GType into a PRUint32, and... that
breaks on 64 bits arches.
see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=259836 for initial report
on firefox.
Interestingly, the issue shows up only on some systems, not all, but does every
time on systems where it does.
A patch has been provided on the Debian BTS (basically replacing PRUint32 by
GType for nsAccessibleWrap::GetMaiAtkType return type) but is not enough (it is
missing an include to get GType definition in nsAccessibleWrap.h, and several
Makefile.in updates for include paths to fit this change).
An easier fix is to replace PRUint32 by unsigned long int (doesn't need
additional changes), and it has been verified to fix the issue on broken systems.
Reproducible: Always
Steps to Reproduce:
Comment 1•21 years ago
|
||
confirming based on the Debian report.
Can you upload a complete patch here?
So, GType is differently typedef'd on different platforms (32bit vs 64bit)?
Updated•21 years ago
|
Assignee: aaronleventhal → pkwarren
| Assignee | ||
Comment 2•21 years ago
|
||
From gtype.h:
/* Typedefs
*/
#if GLIB_SIZEOF_LONG == GLIB_SIZEOF_SIZE_T
typedef gulong GType;
#else /* hm, shouldn't happen? */
typedef gsize GType;
#endif
| Assignee | ||
Comment 3•21 years ago
|
||
I would prefer to use GType as the return type of the function instead of
unsigned long. I have removed the class members for those functions, and just
made them static (they are not called from any other code).
| Assignee | ||
Updated•21 years ago
|
Attachment #156851 -
Flags: review?(Louie.Zhao)
Comment 4•21 years ago
|
||
*** Bug 263543 has been marked as a duplicate of this bug. ***
Comment 5•21 years ago
|
||
Flags: blocking-aviary1.0?
Comment 6•21 years ago
|
||
This is a mustfix for 1.0 IMO. There is no point in shipping/supporting Firefox
for AMD64 or any other 64bit platform without fixing this bug since it is highly
visible. I've already got two reports in Red Hat bugzilla about this from
Rawhide. I expect if we ship with this, I will be inundated with such reports,
as will mozilla.org.
Comment on attachment 156851 [details] [diff] [review]
Patch v1
Does this patch still apply?
Attachment #156851 -
Flags: superreview+
Attachment #156851 -
Flags: review?(kyle.yuan)
Attachment #156851 -
Flags: review?(Louie.Zhao)
Comment on attachment 156851 [details] [diff] [review]
Patch v1
Louie should review this.
Attachment #156851 -
Flags: review?(kyle.yuan) → review?(Louie.Zhao)
Updated•21 years ago
|
Attachment #156851 -
Flags: review?(Louie.Zhao) → review+
Updated•21 years ago
|
Flags: blocking-aviary1.0? → blocking-aviary1.0+
| Assignee | ||
Comment 9•21 years ago
|
||
Can someone with access to a 64-bit system confirm that this patch actually
fixes the crash before we check it in to all the branches?
| Assignee | ||
Comment 10•21 years ago
|
||
Comment on attachment 156851 [details] [diff] [review]
Patch v1
Requesting approval for checking in the fix on aviary and 1.7 branches.
Attachment #156851 -
Flags: approval1.7.x?
Attachment #156851 -
Flags: approval-aviary?
Comment 11•21 years ago
|
||
> Can someone with access to a 64-bit system confirm that this patch actually
> fixes the crash before we check it in to all the branches?
Where is this confirmation?
Comment 12•21 years ago
|
||
Comment on attachment 156851 [details] [diff] [review]
Patch v1
a=chofmann for the branches
Attachment #156851 -
Flags: approval1.7.x?
Attachment #156851 -
Flags: approval1.7.x+
Attachment #156851 -
Flags: approval-aviary?
Attachment #156851 -
Flags: approval-aviary+
Comment 13•21 years ago
|
||
The issue seems to be gone in rawhide's firefox-0.10.1-1.0PR1.10.
Comment 14•21 years ago
|
||
Landed on trunk and branches per confirmation that the fix works.
Status: NEW → RESOLVED
Closed: 21 years ago
Keywords: fixed-aviary1.0,
fixed1.7.x
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•