Use GType as the return type for GetMaiAtkType since it is not the same as PRUint32 on all architectures.  Bug 256603, patch by pkwarren@gmail.com, r=Louie.Zhao@sun.com, sr=dbaron.